
* Flag Widget
  - [New]Added "show_pit_request" option,
    which shows pit request state.
  - [New]Added "show_finish_state" option,
    which shows finish or disqualify state.

* Relative Widget
  - [New]Added "show_vehicle_brand_as_name" option,
    which shows vehicle brand name instead of vehicle name.
    Vehicle brand names are defined in "brands.json" file in "Settings" folder.

* Standings Widget
  - [New]Added "show_best_laptime" option,
    which shows driver's session best lap time.
    This option is disabled by default.
    Note: when this option is disabled,
    the other "show_laptime" option will
    show best lap time in none-race sessions.
  - [New]Added "show_vehicle_brand_as_name" option,
    same as Relative Widget.

* Tyre carcass Widget
  - [New]Added "show_rate_of_change" option,
    which shows carcass temperature rate of change for a specific time interval.
  - Added "rate_of_change_interval" option,
    which sets time interval (in seconds) for rate of change calculation.
    Default is 5 seconds.
  - Added "layout" & "column_index_*" options.

* Misc
  - "brands" filename is now reserved for vehicle brands preset.
  - Added "Brands preset" section in user guide.
  - Updated Flag, Relative, Standings, Tyre carcass Widget entries in user guide.
  - Updated README info for LMU.

2.8.0 (2024-02-23)
-----------------------------
* [New]Damage Widget
  - Show visualized vehicle body damage, wheel damage info.
  - Show vehicle body integrity percentage reading.

* Standings Widget
  - Added "show_time_interval_from_same_class" option,
    which shows time interval from same class instead.
    This option is enabled by default, and only takes effect
    while "enable_multi_class_split_mode" is enabled.

* Steering Widget
  - Added "manual_steering_range" option,
    which sets steering display range in degrees.
    Set to "0" to read physical steering range from API.
    This option may be useful when steering range value