@@ -41,6 +41,7 @@ CFG_API_NAME = "^api_name$"
 CFG_COLOR = "color"
 CFG_FONT_NAME = "font_name"
 CFG_FONT_WEIGHT = "font_weight"
+CFG_ENCODING = "character_encoding"
 CFG_HEATMAP = "heatmap"
 CFG_STRING = (
     # Exact match
@@ -113,6 +114,7 @@ ABBR_LIST = (
 ABBR_PATTERN = "|".join(ABBR_LIST)
 
 # Option list & dictionary
+ENCODING_LIST = "UTF-8", "ISO-8859-1"
 FONT_WEIGHT_LIST = "normal", "bold"
 UNITS_DICT = {
     "distance_unit": ("Meter", "Feet"),
