@@ -353,6 +353,11 @@ class UserConfig(QDialog):
                 self.__add_option_combolist(
                     idx, key, layout, rxp.FONT_WEIGHT_LIST)
                 continue
+            # Encoding string
+            if re.search(rxp.CFG_ENCODING, key):
+                self.__add_option_combolist(
+                    idx, key, layout, rxp.ENCODING_LIST)
+                continue
             # Heatmap string
             if re.search(rxp.CFG_HEATMAP, key):
                 self.__add_option_combolist(
